GNOME Bugzilla – Bug 676482
man: URLs can't include dots right now
Last modified: 2012-09-04 14:20:07 UTC
There are a number of man pages which have a "." in their name, but yelp fails to parse these as man urls. URL escaping the dot (i.e. writing %2E instead) doesn't work either. It would be great if yelp could parse these URLs, since many man pages rely on this, in particular a large number which document file formats. Example: man:NetworkManager.conf
Created attachment 215098 [details] [review] improve man: uri support
*** Bug 677716 has been marked as a duplicate of this bug. ***
Shaun, any comment on this patch ?
Ping ?
I don't really want to break a URI syntax that's been supported for the last decade.
Created attachment 220325 [details] [review] another attempt Here is another iteration of the patch. This one tries harder to keep things like man:printf.1 working.
Created attachment 220326 [details] small test Here is a small test that I used to convince myself that the new regex is better
Shaun ?
Fails for all of /usr/share/man/mann, or whatever other makeshift non-initial-numeric categories $RANDOM_DISTRO decides to add. I'm debating whether to care.